# music-tui

./: Cargo.toml  LICENSE  README.md
src/: app.rs  art.rs  audio.rs  config.rs  db.rs  input.rs  ipc.rs  main.rs  model.rs  playlist.rs  scan.rs  ui.rs
